created frontend and verified operation

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/css/master.css">
   <title>Document</title>
 </head>
 <body>
-
+  <div class="counterApp">
+    <button class="counterButton">Add One</button>
+    <p class="counterOutput"></p>
+  </div>
+  <script src="/js/app.js" charset="utf-8"></script>
 </body>
 </html>
