added minus, amount of change, and persistent count

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
   <div class="counterApp">
-    <button class="counterButton">Add One</button>
+    <label>Amount of Change</label>
+    <input id="counterAmount" value=1>
+    <button class="counterIncrementButton">Add</button>
+    <button class="counterDecrementButton">Subtract</button>
+
     <p class="counterOutput"></p>
   </div>
   <script src="/js/app.js" charset="utf-8"></script>
