added reset. removed some comments

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,10 +10,10 @@
 <body>
   <div class="counterApp">
     <label>Amount of Change</label>
-    <input id="counterAmount" value=1>
+    <input type="number" id="counterAmount" value=1>
     <button class="counterIncrementButton">Add</button>
     <button class="counterDecrementButton">Subtract</button>
-
+    <button class="counterResetButton">Reset</button>
     <p class="counterOutput"></p>
   </div>
   <script src="/js/app.js" charset="utf-8"></script>
